[package]
name = "clean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
rayon = "1.10.0"
serde = { version = "1.0.200", features = ["derive"] }
toml = "0.8.12"

[profile.release]
lto = true